# qtodo

./: .gitignore  .gitmodules  index.html
src/: CMakeLists.txt  LICENSES  accounts_gui.sh  android.qrc  bar-descriptor.xml  build.sh  deployment.pri  filehelper.cpp  filehelper.h  harbour-qtodo.desktop  icon.qrc  imapaccounthelper.cpp  imapaccounthelper.h  imapaccountlistmodel.cpp  imapaccountlistmodel.h  imapstorage.cpp  imapstorage.h  main-qt5.cpp  main-qt6.cpp  main.cpp  merger.cpp  merger.h  nodelistmodel.cpp  nodelistmodel.h  prepare_windows_build.sh  qml_desktop.qrc  qtmail.sh  qtodo.desktop  qtodo.pro  qtodo.pro.backup  qtodo.sh  qtodo_harmattan.desktop  qtodo_harmattan.sh  qtodo_mer.desktop  qtodotrayicon.cpp  qtodotrayicon.h  qtodoview.cpp  qtodoview.h  sample.xml  synctoimap.cpp  (+4 more)
src/android/: AndroidManifest.xml
src/lib/: fix-qmf-bb10-build.patch  qmf  qmlcanvas-add-null-pointer-checks.patch  qmlcanvas-fix-harmattan-segfault.patch
src/qml/: AboutDialog.qml  Drawing.qml  EditSketchSheet.qml  EditToDoSheet.qml  FlowListView.qml  NodeListView.qml  TreeView.qml  main.qml  nodelisthelper.js
src/qml/bb10/: CommonBB10TextArea.qml  EditSketchSheet.qml  EditToDoSheet.qml  Menu.qml  SecondPage.qml  main.qml
src/qml/bb10/common/: CommonButton.qml  CommonTextArea.qml  CommonToolIcon.qml  ConfirmationDialog.qml  ImapStorage.qml
src/qml/common/: AboutDialog.qml  CommonFlickable.qml  CommonTextArea.qml  CommonTextField.qml  ConfirmationDialog.qml  Drawing.qml  EditSketchSheet.qml  EditToDoSheet.qml  FlowListView.qml  Header.qml  ImapAccountSettingsSheet.qml  MainRectangle.qml  MessageDialog.qml  NodeListDelegate.qml  NodeListDelegateContainer.qml  NodeListView.qml  ProgressDialog.qml  QToDoToolBar.qml  SyncDirToImap.qml  SyncFileToImap.qml  SyncToImap.qml  SyncToImapBase.qml  TreeView.qml  nodelisthelper.js
src/qml/desktop/: EditSketchSheet.qml  EditToDoSheet.qml  ImapAccountSettingsSheet.qml  Menu.qml  main.qml
src/qml/desktop/common/: CommonButton.qml  CommonDialog.qml  (+7 more)
src/qml/meego/: EditSketchSheet.qml  EditToDoSheet.qml  main.qml
src/qml/sailfish/: EditToDoDialog.qml  main.qml
src/qml/windows/: main.qml
src/qtc_packaging/debian_harmattan/: README  changelog  control  copyright  manifest.aegis  rules
src/qtc_packaging/desktop_version_files/: qtodo.desktop
src/qtc_packaging/rpm_nemo/: qtodo.changes  qtodo.spec  qtodo.yaml
src/qtc_packaging/windows/: qtodo.rc
src/rpm/: harbour-qtodo.spec  harbour-qtodo.yaml  qtodo.spec  qtodo.yaml
src/synctoimap/: imapaccountlistmodel.cpp  imapaccountlistmodel.h  synctoimap.cpp  synctoimap.h
(+66 files in other folders)
